Fix text overlapping

--- a/src/assets/landing-1.css
+++ b/src/assets/landing-1.css
@@ -9,12 +9,14 @@ html, body {
 
     max-width: 100vw;
     width: 100vw;
-    height: 100vh;
 
     margin: 0;
     padding: 0;
 
     background-color: #f9f8f8;
+
+    position: relative;
+    min-height: 100%;
 }
 
 @media all and (max-width: 1000px) {
