--- a/src/assets/landing-2.css
+++ b/src/assets/landing-2.css
@@ -12,9 +12,8 @@
     margin: 0;
     padding: 0;
 
-    position: relative;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .landing-subpage-heading {
